<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.uaeh.aame.appcobadm.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_materias"
        android:name="com.uaeh.aame.appcobadm.ui.MateriasFrg"
        android:label="@string/menu_materias"
        tools:layout="@layout/fragment_materias">
        <action
            android:id="@+id/action_nav_materias_to_detailMateria"
            app:destination="@id/detailMateria" />
    </fragment>

    <fragment
        android:id="@+id/detailMateria"
        android:name="com.uaeh.aame.appcobadm.ui.DetallesMateriaFrg"
        android:label="@string/nvDetalleMateria"
        tools:layout="@layout/fragment_detalles_materia_frg"/>

    <fragment
        android:id="@+id/nav_desempeno"
        android:name="com.uaeh.aame.appcobadm.ui.MateriasDesFrg"
        android:label="@string/menu_actividades"
        tools:layout="@layout/fragment_materias_des">
        <action
            android:id="@+id/action_materiaDes_to_desempeno"
            app:destination="@id/desempeno" />
    </fragment>

    <fragment
        android:id="@+id/desempeno"
        android:name="com.uaeh.aame.appcobadm.ui.DesempenoFrg"
        android:label="@string/nvDesemAlum"
        tools:layout="@layout/fragment_desempeno"/>

    <fragment
        android:id="@+id/nav_user_data"
        android:name="com.uaeh.aame.appcobadm.ui.UserDataFragment"
        android:label="@string/nvUserData"
        tools:layout="@layout/fragment_user_data">
        <action
            android:id="@+id/action_nav_user_data_to_UpdateData"
            app:destination="@id/UpdateData"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/UpdateData"
        android:name="com.uaeh.aame.appcobadm.ui.UpdateDataFragment"
        android:label="@string/nvUpdateUser"
        tools:layout="@layout/fragment_update_data"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.uaeh.aame.appcobadm.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>

</navigation>