<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_frg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateDataFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="490dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:padding="8dp"
        android:textColor="@color/input_register"
        android:text="No es necesario volver a reescribir tus datos, solo llena los campos a corregir."
        android:textAlignment="center"
        android:singleLine="false"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_name"
        android:padding="8dp"
        android:inputType="textCapWords"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_lsname"
        android:padding="8dp"
        android:inputType="textCapWords"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_phone"
        android:padding="8dp"
        android:inputType="text|phone"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_email"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_passwd"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etConfirmarConstraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="Confirmar Nueva Contraseña"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/rounded_button"
        android:text="@string/btnActualizarUsuario"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>