<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment"
    android:background="@color/bg_about">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_programmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/linlay_about_frag"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:contentDescription="@string/image_programmer"
            android:src="@mipmap/ic_programmer_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/develop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/by"
            android:textColor="#AFB1B3"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/programmer_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>